--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,121 @@
-.container {
-  padding: 0 2rem;
+.login_container {
+  width: 100vw;
+  height: 100vh;
 }
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.login_block {
+  background: rgba(255, 255, 255, 0.05);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.103);
+  backdrop-filter: blur(1.5px);
+  -webkit-backdrop-filter: blur(1.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  width: 400px;
+  padding: 50px 10px;
 }
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+.logo {
+  width: 200px;
+  height: 50px;
   text-align: center;
 }
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.logo img {
+  width: 100%;
+  height: fit-content;
 }
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.signin_info {
+  text-align: center;
 }
-
-.grid {
+.welcome {
+  font-size: 2rem;
+  margin: 0px;
+}
+.input_block {
+  display: flex;
+  flex-direction: column;
+}
+.label {
+  padding: 10px 0;
+  font-size: medium;
+  font-weight: normal;
+}
+.error_text {
+  color: red;
+  font-size: 1rem;
+}
+.input_section{
+    width: 300px;
+    height: 30px;
+    border: 1px solid rgba(11, 11, 11, 0.655);
+    border-radius: 5px;
+    padding-left: 5px;
+}
+.signin_button{
+    width: 100%;
+    color: #fff;
+    background-color: #1029AD;
+    padding: 8px;
+    margin: 20px 0 ;
+    font-size: medium;
+    font-weight: bold;
+    border: 2px solid #1029AD;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.forgotpassword {
+  text-align: end;
+  text-decoration: none;
+  color: gray;
+  font-size: 0.9rem;
+}
+.alter_text {
+  margin-top: -6px;
+  font-size: 0.9rem;
+  color: gray;
+}
+.signup_link{
+    font-size: 1rem;
+    color: #1029AD;
+    text-decoration: none;
+    font-weight: bolder;
+}
+.google_login {
+  width: 250px;
+  margin-top: 20px;
+  padding: 7px 20px;
+  border: 2px solid rgb(173 173 173 / 88%);
+  text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
+  gap: 10px;
+  color: #525252;
+  font-size: 15px;
+  cursor: pointer;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  box-shadow: 0 8px 32px 0 rgb(31 38 135 / 10%);
+}
+.google_icon {
+  width: 30px;
+  height: 30px;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.align_row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.align_column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.errormsg {
+  color: #fff;
+  background-color: red;
+  width: 100%;
+  text-align: center;
+  padding: 5px;
 }
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
+.signup{
+  margin: 0 0 10px 0
 }
