--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,167 @@ a {
     background: black;
   }
 }
+.chatbox-typing-span{
+  width: fit-content;
+  padding: 6px 3px;
+}
+.typing-span{
+  padding-top: 8px;
+  /* padding: 10px; */
+  /* box-shadow: 0 1px 3px rgba(11, 20, 26, 0.13); */
+  width: fit-content;
+  border-radius: 10px;
+  /* margin: 12px; */
+}
+.typing-indicator{
+  display: flex;
+  align-items: center;
+  column-gap: 3px;
+}
+
+.typing-indicator div:first-child{ animation-delay: 0.2s;}
+.typing-indicator div:nth-child(2){ animation-delay: 0.4s;}
+.typing-indicator div:nth-child(3){ animation-delay: 0.6s;}
+.dot{
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #3897f0;
+  opacity: 0;
+  animation: dotsBounce 1s infinite;
+}
+
+@keyframes dotsBounce {
+  0%,20%{
+    opacity: 0.2;
+    transform: scale(1);
+  }
+  50%{
+    opacity: 1;
+    transform: scale(1.2);
+  }
+  100%{
+    opacity: 0.2;
+    transform: scale(1);
+  }
+}
+.badge{
+  text-align: center;
+  width: 25px;
+  border-radius: 50%;
+  background-color: #0BDA51;
+  height: 25px;
+  line-height: 25px;
+  font-size: 14px;
+  color: white;
+  font-weight: 600;
+  margin-right: 8px;
+  box-shadow: 0 1px 3px rgba(11, 20, 26, 0.13);
+}
+.searchBox{
+  outline: none;
+  border: 0;
+  border-bottom: 1px solid #8a8a8a;
+  width: 100%;
+  padding: 14px 8px 4px 8px;
+  letter-spacing: 0.5px;
+  vertical-align: bottom;
+  /* display: inline-block; */
+  font-size: 14px;
+  background-color: transparent;
+}
+
+.clearIcon::after{
+  content: "\00d7";
+  font-size: 20px;
+}
+
+.menuIcon::after{
+  content: '\2807';
+  font-size: 20px;
+  cursor: pointer;
+}
+.chips-container{
+  width: 40px;
+  border-radius: 50px;
+  position: relative;
+  backdrop-filter: contrast(0.5);
+  height: 40px;
+}
+.chips-container img{
+  width: 40px;
+  border-radius: 50px;
+}
+.chips-container span{
+  position: absolute;
+  top: -27px;
+  left: 0px;
+  backdrop-filter: contrast(0.9);
+}
+.chips::after{
+  content: "\00d7";
+  font-size: 60px;
+  color: #222;
+  font-weight: 100;
+}
+.MenuBox{
+  position: absolute;
+  box-shadow: 0px 2px 4px 0px #ccc;
+  z-index: 1;
+  background-color: #fff;
+  border-radius: 4px;
+}
+.MenuBox ul{
+  margin: 0;
+  list-style: none;
+  padding-inline: 0px;
+}
+.MenuBox li{
+  padding: 8px 12px;
+  cursor: pointer;
+}
+.d-none{
+  display: none;
+}
+.clearIcon{
+  position: absolute;
+  right: 0px;
+}
+.login-button{
+  background: linear-gradient(135deg, rgba(255, 255, 255, 5), rgb(255 232 232 / 60%));
+  color: #45b332 !important;
+  width: 120px !important;
+}
+.login-button::before{
+  filter:blur(1px)
+}
+.flex-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.file_upload{
+  display: none;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+/* Track */
+/* ::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+} */
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #efeae2; 
+  /* border-radius: 10px; */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #efeae2; 
+}
